Phase2/parser.output
Terminals unused in grammar

   UMINUS


State 19 conflicts: 1 shift/reduce
State 118 conflicts: 13 shift/reduce
State 144 conflicts: 1 shift/reduce


Grammar

    0 $accept: program $end

    1 program: stmts

    2 stmts: %empty
    3      | stmt stmts

    4 stmt: expr SEMICOLON
    5     | ifstmt
    6     | whilestmt
    7     | forstmt
    8     | returnstmt
    9     | BREAK SEMICOLON
   10     | CONTINUE SEMICOLON
   11     | block
   12     | funcdef
   13     | SEMICOLON

   14 expr: assignexpr
   15     | expr op expr
   16     | term

   17 op: PLUS
   18   | MINUS
   19   | MULT
   20   | DIV
   21   | MOD
   22   | GREATER
   23   | GREATER_EQUAL
   24   | LESS
   25   | LESS_EQUAL
   26   | EQUAL
   27   | NOT_EQUAL
   28   | AND
   29   | OR

   30 term: LEFT_PARENTHESIS expr RIGHT_PARENTHESIS
   31     | MINUS expr
   32     | NOT expr
   33     | PLUS_PLUS lvalue
   34     | lvalue PLUS_PLUS
   35     | MINUS_MINUS lvalue
   36     | lvalue MINUS_MINUS
   37     | primary

   38 assignexpr: lvalue ASSIGN expr

   39 primary: lvalue
   40        | call
   41        | objectdef
   42        | LEFT_PARENTHESIS funcdef RIGHT_PARENTHESIS
   43        | const

   44 lvalue: ID
   45       | LOCAL ID
   46       | DOUBLE_COLON ID
   47       | member

   48 member: lvalue DOT ID
   49       | lvalue LEFT_BRACKET expr RIGHT_BRACKET
   50       | call DOT ID
   51       | call LEFT_BRACKET expr RIGHT_BRACKET

   52 call: call LEFT_PARENTHESIS elist RIGHT_PARENTHESIS
   53     | lvalue callsuffix
   54     | LEFT_PARENTHESIS funcdef RIGHT_PARENTHESIS LEFT_PARENTHESIS elist RIGHT_PARENTHESIS

   55 callsuffix: normcall
   56           | methodcall

   57 normcall: LEFT_PARENTHESIS elist RIGHT_PARENTHESIS

   58 methodcall: DOUBLE_DOT ID LEFT_PARENTHESIS elist RIGHT_PARENTHESIS

   59 elist: expr comaexpr

   60 comaexpr: %empty
   61         | COMA expr comaexpr

   62 objectdef: LEFT_BRACKET elist RIGHT_BRACKET
   63          | LEFT_BRACKET indexed RIGHT_BRACKET
   64          | LEFT_BRACKET RIGHT_BRACKET

   65 indexed: indexedelem comaindexedelem

   66 comaindexedelem: %empty
   67                | COMA indexedelem comaindexedelem

   68 indexedelem: LEFT_BRACE expr COLON expr RIGHT_BRACE

   69 block: LEFT_BRACE stmts RIGHT_BRACE
   70      | LEFT_BRACE RIGHT_BRACE

   71 funcdef: FUNCTION ID LEFT_PARENTHESIS idlist RIGHT_PARENTHESIS block
   72        | FUNCTION LEFT_PARENTHESIS idlist RIGHT_PARENTHESIS block

   73 const: REALCONST
   74      | INTCONST
   75      | STRING
   76      | NIL
   77      | TRUE
   78      | FALSE

   79 idlist: %empty
   80       | ID comaid

   81 comaid: COMA ID comaid
   82       | %empty

   83 ifstmt: IF LEFT_PARENTHESIS expr RIGHT_PARENTHESIS stmt ELSE stmt
   84       | IF LEFT_PARENTHESIS expr RIGHT_PARENTHESIS stmt

   85 whilestmt: WHILE LEFT_PARENTHESIS expr RIGHT_PARENTHESIS stmt

   86 forstmt: FOR LEFT_PARENTHESIS elist SEMICOLON expr SEMICOLON elist RIGHT_PARENTHESIS stmt

   87 returnstmt: RETURN expr SEMICOLON
   88           | RETURN SEMICOLON


Terminals, with rules where they appear

$end (0) 0
error (256)
IF (258) 83 84
ELSE (259) 83
WHILE (260) 85
FOR (261) 86
FUNCTION (262) 71 72
RETURN (263) 87 88
BREAK (264) 9
CONTINUE (265) 10
AND (266) 28
OR (267) 29
NOT (268) 32
LOCAL (269) 45
TRUE (270) 77
FALSE (271) 78
NIL (272) 76
ASSIGN (273) 38
PLUS (274) 17
MINUS (275) 18 31
MULT (276) 19
DIV (277) 20
MOD (278) 21
EQUAL (279) 26
NOT_EQUAL (280) 27
PLUS_PLUS (281) 33 34
MINUS_MINUS (282) 35 36
GREATER (283) 22
LESS (284) 24
GREATER_EQUAL (285) 23
LESS_EQUAL (286) 25
REALCONST (287) 73
INTCONST (288) 74
STRING (289) 75
LEFT_BRACE (290) 68 69 70
RIGHT_BRACE (291) 68 69 70
LEFT_BRACKET (292) 49 51 62 63 64
RIGHT_BRACKET (293) 49 51 62 63 64
LEFT_PARENTHESIS (294) 30 42 52 54 57 58 71 72 83 84 85 86
RIGHT_PARENTHESIS (295) 30 42 52 54 57 58 71 72 83 84 85 86
SEMICOLON (296) 4 9 10 13 86 87 88
COMA (297) 61 67 81
COLON (298) 68
DOUBLE_COLON (299) 46
DOT (300) 48 50
DOUBLE_DOT (301) 58
ID (302) 44 45 46 48 50 58 71 80 81
UMINUS (303)


Nonterminals, with rules where they appear

$accept (49)
    on left: 0
program (50)
    on left: 1, on right: 0
stmts (51)
    on left: 2 3, on right: 1 3 69
stmt (52)
    on left: 4 5 6 7 8 9 10 11 12 13, on right: 3 83 84 85 86
expr (53)
    on left: 14 15 16, on right: 4 15 30 31 32 38 49 51 59 61 68 83
    84 85 86 87
op (54)
    on left: 17 18 19 20 21 22 23 24 25 26 27 28 29, on right: 15
term (55)
    on left: 30 31 32 33 34 35 36 37, on right: 16
assignexpr (56)
    on left: 38, on right: 14
primary (57)
    on left: 39 40 41 42 43, on right: 37
lvalue (58)
    on left: 44 45 46 47, on right: 33 34 35 36 38 39 48 49 53
member (59)
    on left: 48 49 50 51, on right: 47
call (60)
    on left: 52 53 54, on right: 40 50 51 52
callsuffix (61)
    on left: 55 56, on right: 53
normcall (62)
    on left: 57, on right: 55
methodcall (63)
    on left: 58, on right: 56
elist (64)
    on left: 59, on right: 52 54 57 58 62 86
comaexpr (65)
    on left: 60 61, on right: 59 61
objectdef (66)
    on left: 62 63 64, on right: 41
indexed (67)
    on left: 65, on right: 63
comaindexedelem (68)
    on left: 66 67, on right: 65 67
indexedelem (69)
    on left: 68, on right: 65 67
block (70)
    on left: 69 70, on right: 11 71 72
funcdef (71)
    on left: 71 72, on right: 12 42 54
const (72)
    on left: 73 74 75 76 77 78, on right: 43
idlist (73)
    on left: 79 80, on right: 71 72
comaid (74)
    on left: 81 82, on right: 80 81
ifstmt (75)
    on left: 83 84, on right: 5
whilestmt (76)
    on left: 85, on right: 6
forstmt (77)
    on left: 86, on right: 7
returnstmt (78)
    on left: 87 88, on right: 8


State 0

    0 $accept: . program $end

    IF                shift, and go to state 1
    WHILE             shift, and go to state 2
    FOR               shift, and go to state 3
    FUNCTION          shift, and go to state 4
    RETURN            shift, and go to state 5
    BREAK             shift, and go to state 6
    CONTINUE          shift, and go to state 7
    NOT               shift, and go to state 8
    LOCAL             shift, and go to state 9
    TRUE              shift, and go to state 10
    FALSE             shift, and go to state 11
    NIL               shift, and go to state 12
    MINUS             shift, and go to state 13
    PLUS_PLUS         shift, and go to state 14
    MINUS_MINUS       shift, and go to state 15
    REALCONST         shift, and go to state 16
    INTCONST          shift, and go to state 17
    STRING            shift, and go to state 18
    LEFT_BRACE        shift, and go to state 19
    LEFT_BRACKET      shift, and go to state 20
    LEFT_PARENTHESIS  shift, and go to state 21
    SEMICOLON         shift, and go to state 22
    DOUBLE_COLON      shift, and go to state 23
    ID                shift, and go to state 24

    $default  reduce using rule 2 (stmts)

    program     go to state 25
    stmts       go to state 26
    stmt        go to state 27
    expr        go to state 28
    term        go to state 29
    assignexpr  go to state 30
    primary     go to state 31
    lvalue      go to state 32
    member      go to state 33
    call        go to state 34
    objectdef   go to state 35
    block       go to state 36
    funcdef     go to state 37
    const       go to state 38
    ifstmt      go to state 39
    whilestmt   go to state 40
    forstmt     go to state 41
    returnstmt  go to state 42


State 1

   83 ifstmt: IF . LEFT_PARENTHESIS expr RIGHT_PARENTHESIS stmt ELSE stmt
   84       | IF . LEFT_PARENTHESIS expr RIGHT_PARENTHESIS stmt

    LEFT_PARENTHESIS  shift, and go to state 43


State 2

   85 whilestmt: WHILE . LEFT_PARENTHESIS expr RIGHT_PARENTHESIS stmt

    LEFT_PARENTHESIS  shift, and go to state 44


State 3

   86 forstmt: FOR . LEFT_PARENTHESIS elist SEMICOLON expr SEMICOLON elist RIGHT_PARENTHESIS stmt

    LEFT_PARENTHESIS  shift, and go to state 45


State 4

   71 funcdef: FUNCTION . ID LEFT_PARENTHESIS idlist RIGHT_PARENTHESIS block
   72        | FUNCTION . LEFT_PARENTHESIS idlist RIGHT_PARENTHESIS block

    LEFT_PARENTHESIS  shift, and go to state 46
    ID                shift, and go to state 47


State 5

   87 returnstmt: RETURN . expr SEMICOLON
   88           | RETURN . SEMICOLON

    NOT               shift, and go to state 8
    LOCAL             shift, and go to state 9
    TRUE              shift, and go to state 10
    FALSE             shift, and go to state 11
    NIL               shift, and go to state 12
    MINUS             shift, and go to state 13
    PLUS_PLUS         shift, and go to state 14
    MINUS_MINUS       shift, and go to state 15
    REALCONST         shift, and go to state 16
    INTCONST          shift, and go to state 17
    STRING            shift, and go to state 18
    LEFT_BRACKET      shift, and go to state 20
    LEFT_PARENTHESIS  shift, and go to state 21
    SEMICOLON         shift, and go to state 48
    DOUBLE_COLON      shift, and go to state 23
    ID                shift, and go to state 24

    expr        go to state 49
    term        go to state 29
    assignexpr  go to state 30
    primary     go to state 31
    lvalue      go to state 32
    member      go to state 33
    call        go to state 34
    objectdef   go to state 35
    const       go to state 38


State 6

    9 stmt: BREAK . SEMICOLON

    SEMICOLON  shift, and go to state 50


State 7

   10 stmt: CONTINUE . SEMICOLON

    SEMICOLON  shift, and go to state 51


State 8

   32 term: NOT . expr

    NOT               shift, and go to state 8
    LOCAL             shift, and go to state 9
    TRUE              shift, and go to state 10
    FALSE             shift, and go to state 11
    NIL               shift, and go to state 12
    MINUS             shift, and go to state 13
    PLUS_PLUS         shift, and go to state 14
    MINUS_MINUS       shift, and go to state 15
    REALCONST         shift, and go to state 16
    INTCONST          shift, and go to state 17
    STRING            shift, and go to state 18
    LEFT_BRACKET      shift, and go to state 20
    LEFT_PARENTHESIS  shift, and go to state 21
    DOUBLE_COLON      shift, and go to state 23
    ID                shift, and go to state 24

    expr        go to state 52
    term        go to state 29
    assignexpr  go to state 30
    primary     go to state 31
    lvalue      go to state 32
    member      go to state 33
    call        go to state 34
    objectdef   go to state 35
    const       go to state 38


State 9

   45 lvalue: LOCAL . ID

    ID  shift, and go to state 53


State 10

   77 const: TRUE .

    $default  reduce using rule 77 (const)


State 11

   78 const: FALSE .

    $default  reduce using rule 78 (const)


State 12

   76 const: NIL .

    $default  reduce using rule 76 (const)


State 13

   31 term: MINUS . expr

    NOT               shift, and go to state 8
    LOCAL             shift, and go to state 9
    TRUE              shift, and go to state 10
    FALSE             shift, and go to state 11
    NIL               shift, and go to state 12
    MINUS             shift, and go to state 13
    PLUS_PLUS         shift, and go to state 14
    MINUS_MINUS       shift, and go to state 15
    REALCONST         shift, and go to state 16
    INTCONST          shift, and go to state 17
    STRING            shift, and go to state 18
    LEFT_BRACKET      shift, and go to state 20
    LEFT_PARENTHESIS  shift, and go to state 21
    DOUBLE_COLON      shift, and go to state 23
    ID                shift, and go to state 24

    expr        go to state 54
    term        go to state 29
    assignexpr  go to state 30
    primary     go to state 31
    lvalue      go to state 32
    member      go to state 33
    call        go to state 34
    objectdef   go to state 35
    const       go to state 38


State 14

   33 term: PLUS_PLUS . lvalue

    LOCAL             shift, and go to state 9
    LEFT_PARENTHESIS  shift, and go to state 55
    DOUBLE_COLON      shift, and go to state 23
    ID                shift, and go to state 24

    lvalue  go to state 56
    member  go to state 33
    call    go to state 57


State 15

   35 term: MINUS_MINUS . lvalue

    LOCAL             shift, and go to state 9
    LEFT_PARENTHESIS  shift, and go to state 55
    DOUBLE_COLON      shift, and go to state 23
    ID                shift, and go to state 24

    lvalue  go to state 58
    member  go to state 33
    call    go to state 57


State 16

   73 const: REALCONST .

    $default  reduce using rule 73 (const)


State 17

   74 const: INTCONST .

    $default  reduce using rule 74 (const)


State 18

   75 const: STRING .

    $default  reduce using rule 75 (const)


State 19

   69 block: LEFT_BRACE . stmts RIGHT_BRACE
   70      | LEFT_BRACE . RIGHT_BRACE

    IF                shift, and go to state 1
    WHILE             shift, and go to state 2
    FOR               shift, and go to state 3
    FUNCTION          shift, and go to state 4
    RETURN            shift, and go to state 5
    BREAK             shift, and go to state 6
    CONTINUE          shift, and go to state 7
    NOT               shift, and go to state 8
    LOCAL             shift, and go to state 9
    TRUE              shift, and go to state 10
    FALSE             shift, and go to state 11
    NIL               shift, and go to state 12
    MINUS             shift, and go to state 13
    PLUS_PLUS         shift, and go to state 14
    MINUS_MINUS       shift, and go to state 15
    REALCONST         shift, and go to state 16
    INTCONST          shift, and go to state 17
    STRING            shift, and go to state 18
    LEFT_BRACE        shift, and go to state 19
    RIGHT_BRACE       shift, and go to state 59
    LEFT_BRACKET      shift, and go to state 20
    LEFT_PARENTHESIS  shift, and go to state 21
    SEMICOLON         shift, and go to state 22
    DOUBLE_COLON      shift, and go to state 23
    ID                shift, and go to state 24

    RIGHT_BRACE  [reduce using rule 2 (stmts)]

    stmts       go to state 60
    stmt        go to state 27
    expr        go to state 28
    term        go to state 29
    assignexpr  go to state 30
    primary     go to state 31
    lvalue      go to state 32
    member      go to state 33
    call        go to state 34
    objectdef   go to state 35
    block       go to state 36
    funcdef     go to state 37
    const       go to state 38
    ifstmt      go to state 39
    whilestmt   go to state 40
    forstmt     go to state 41
    returnstmt  go to state 42


State 20

   62 objectdef: LEFT_BRACKET . elist RIGHT_BRACKET
   63          | LEFT_BRACKET . indexed RIGHT_BRACKET
   64          | LEFT_BRACKET . RIGHT_BRACKET

    NOT               shift, and go to state 8
    LOCAL             shift, and go to state 9
    TRUE              shift, and go to state 10
    FALSE             shift, and go to state 11
    NIL               shift, and go to state 12
    MINUS             shift, and go to state 13
    PLUS_PLUS         shift, and go to state 14
    MINUS_MINUS       shift, and go to state 15
    REALCONST         shift, and go to state 16
    INTCONST          shift, and go to state 17
    STRING            shift, and go to state 18
    LEFT_BRACE        shift, and go to state 61
    LEFT_BRACKET      shift, and go to state 20
    RIGHT_BRACKET     shift, and go to state 62
    LEFT_PARENTHESIS  shift, and go to state 21
    DOUBLE_COLON      shift, and go to state 23
    ID                shift, and go to state 24

    expr         go to state 63
    term         go to state 29
    assignexpr   go to state 30
    primary      go to state 31
    lvalue       go to state 32
    member       go to state 33
    call         go to state 34
    elist        go to state 64
    objectdef    go to state 35
    indexed      go to state 65
    indexedelem  go to state 66
    const        go to state 38


State 21

   30 term: LEFT_PARENTHESIS . expr RIGHT_PARENTHESIS
   42 primary: LEFT_PARENTHESIS . funcdef RIGHT_PARENTHESIS
   54 call: LEFT_PARENTHESIS . funcdef RIGHT_PARENTHESIS LEFT_PARENTHESIS elist RIGHT_PARENTHESIS

    FUNCTION          shift, and go to state 4
    NOT               shift, and go to state 8
    LOCAL             shift, and go to state 9
    TRUE              shift, and go to state 10
    FALSE             shift, and go to state 11
    NIL               shift, and go to state 12
    MINUS             shift, and go to state 13
    PLUS_PLUS         shift, and go to state 14
    MINUS_MINUS       shift, and go to state 15
    REALCONST         shift, and go to state 16
    INTCONST          shift, and go to state 17
    STRING            shift, and go to state 18
    LEFT_BRACKET      shift, and go to state 20
    LEFT_PARENTHESIS  shift, and go to state 21
    DOUBLE_COLON      shift, and go to state 23
    ID                shift, and go to state 24

    expr        go to state 67
    term        go to state 29
    assignexpr  go to state 30
    primary     go to state 31
    lvalue      go to state 32
    member      go to state 33
    call        go to state 34
    objectdef   go to state 35
    funcdef     go to state 68
    const       go to state 38


State 22

   13 stmt: SEMICOLON .

    $default  reduce using rule 13 (stmt)


State 23

   46 lvalue: DOUBLE_COLON . ID

    ID  shift, and go to state 69


State 24

   44 lvalue: ID .

    $default  reduce using rule 44 (lvalue)


State 25

    0 $accept: program . $end

    $end  shift, and go to state 70


State 26

    1 program: stmts .

    $default  reduce using rule 1 (program)


State 27

    3 stmts: stmt . stmts

    IF                shift, and go to state 1
    WHILE             shift, and go to state 2
    FOR               shift, and go to state 3
    FUNCTION          shift, and go to state 4
    RETURN            shift, and go to state 5
    BREAK             shift, and go to state 6
    CONTINUE          shift, and go to state 7
    NOT               shift, and go to state 8
    LOCAL             shift, and go to state 9
    TRUE              shift, and go to state 10
    FALSE             shift, and go to state 11
    NIL               shift, and go to state 12
    MINUS             shift, and go to state 13
    PLUS_PLUS         shift, and go to state 14
    MINUS_MINUS       shift, and go to state 15
    REALCONST         shift, and go to state 16
    INTCONST          shift, and go to state 17
    STRING            shift, and go to state 18
    LEFT_BRACE        shift, and go to state 19
    LEFT_BRACKET      shift, and go to state 20
    LEFT_PARENTHESIS  shift, and go to state 21
    SEMICOLON         shift, and go to state 22
    DOUBLE_COLON      shift, and go to state 23
    ID                shift, and go to state 24

    $default  reduce using rule 2 (stmts)

    stmts       go to state 71
    stmt        go to state 27
    expr        go to state 28
    term        go to state 29
    assignexpr  go to state 30
    primary     go to state 31
    lvalue      go to state 32
    member      go to state 33
    call        go to state 34
    objectdef   go to state 35
    block       go to state 36
    funcdef     go to state 37
    const       go to state 38
    ifstmt      go to state 39
    whilestmt   go to state 40
    forstmt     go to state 41
    returnstmt  go to state 42


State 28

    4 stmt: expr . SEMICOLON
   15 expr: expr . op expr

    AND            shift, and go to state 72
    OR             shift, and go to state 73
    PLUS           shift, and go to state 74
    MINUS          shift, and go to state 75
    MULT           shift, and go to state 76
    DIV            shift, and go to state 77
    MOD            shift, and go to state 78
    EQUAL          shift, and go to state 79
    NOT_EQUAL      shift, and go to state 80
    GREATER        shift, and go to state 81
    LESS           shift, and go to state 82
    GREATER_EQUAL  shift, and go to state 83
    LESS_EQUAL     shift, and go to state 84
    SEMICOLON      shift, and go to state 85

    op  go to state 86


State 29

   16 expr: term .

    $default  reduce using rule 16 (expr)


State 30

   14 expr: assignexpr .

    $default  reduce using rule 14 (expr)


State 31

   37 term: primary .

    $default  reduce using rule 37 (term)


State 32

   34 term: lvalue . PLUS_PLUS
   36     | lvalue . MINUS_MINUS
   38 assignexpr: lvalue . ASSIGN expr
   39 primary: lvalue .
   48 member: lvalue . DOT ID
   49       | lvalue . LEFT_BRACKET expr RIGHT_BRACKET
   53 call: lvalue . callsuffix

    ASSIGN            shift, and go to state 87
    PLUS_PLUS         shift, and go to state 88
    MINUS_MINUS       shift, and go to state 89
    LEFT_BRACKET      shift, and go to state 90
    LEFT_PARENTHESIS  shift, and go to state 91
    DOT               shift, and go to state 92
    DOUBLE_DOT        shift, and go to state 93

    $default  reduce using rule 39 (primary)

    callsuffix  go to state 94
    normcall    go to state 95
    methodcall  go to state 96


State 33

   47 lvalue: member .

    $default  reduce using rule 47 (lvalue)


State 34

   40 primary: call .
   50 member: call . DOT ID
   51       | call . LEFT_BRACKET expr RIGHT_BRACKET
   52 call: call . LEFT_PARENTHESIS elist RIGHT_PARENTHESIS

    LEFT_BRACKET      shift, and go to state 97
    LEFT_PARENTHESIS  shift, and go to state 98
    DOT               shift, and go to state 99

    $default  reduce using rule 40 (primary)


State 35

   41 primary: objectdef .

    $default  reduce using rule 41 (primary)


State 36

   11 stmt: block .

    $default  reduce using rule 11 (stmt)


State 37

   12 stmt: funcdef .

    $default  reduce using rule 12 (stmt)


State 38

   43 primary: const .

    $default  reduce using rule 43 (primary)


State 39

    5 stmt: ifstmt .

    $default  reduce using rule 5 (stmt)


State 40

    6 stmt: whilestmt .

    $default  reduce using rule 6 (stmt)


State 41

    7 stmt: forstmt .

    $default  reduce using rule 7 (stmt)


State 42

    8 stmt: returnstmt .

    $default  reduce using rule 8 (stmt)


State 43

   83 ifstmt: IF LEFT_PARENTHESIS . expr RIGHT_PARENTHESIS stmt ELSE stmt
   84       | IF LEFT_PARENTHESIS . expr RIGHT_PARENTHESIS stmt

    NOT               shift, and go to state 8
    LOCAL             shift, and go to state 9
    TRUE              shift, and go to state 10
    FALSE             shift, and go to state 11
    NIL               shift, and go to state 12
    MINUS             shift, and go to state 13
    PLUS_PLUS         shift, and go to state 14
    MINUS_MINUS       shift, and go to state 15
    REALCONST         shift, and go to state 16
    INTCONST          shift, and go to state 17
    STRING            shift, and go to state 18
    LEFT_BRACKET      shift, and go to state 20
    LEFT_PARENTHESIS  shift, and go to state 21
    DOUBLE_COLON      shift, and go to state 23
    ID                shift, and go to state 24
